Change in Dockerfile

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,5 +1,5 @@
 FROM python:2
 RUN pip install flask && \
     pip install flask_restful && \
-    pip install
+    pip install pymongo
 VOLUME codegladiator
