--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -3,4 +3,4 @@ RUN pip install flask && \
     pip install flask_restful && \
     pip install pymongo
 VOLUME codegladiator
-CMD ["python","codegladiator/backend/databaseCommunicator/main.py"]
+#CMD ["python","codegladiator/backend/databaseCommunicator/main.py"]
