Added logger and request module

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,6 +1,7 @@
 FROM python:2
 RUN pip install flask && \
     pip install flask_restful && \
-    pip install pymongo
+    pip install pymongo && \
+    pip install requests
 VOLUME codegladiator
 #CMD ["python","codegladiator/backend/databaseCommunicator/main.py"]
