--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -5,4 +5,5 @@ RUN pip install flask && \
     pip install requests
 VOLUME codegladiator
 COPY databaseCommunicator codegladiator/dbCommunicator
+CMD ["mkdir","codegladiator/dbCommunicator/logs"]
 #CMD ["python","codegladiator/backend/databaseCommunicator/main.py"]
