--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -3,7 +3,9 @@ RUN pip install flask && \
     pip install flask_restful && \
     pip install pymongo && \
     pip install requests
+RUN mkdir -p codegladiator/dbCommunicator/logs
 VOLUME codegladiator
-COPY databaseCommunicator codegladiator/dbCommunicator
-CMD ["mkdir","codegladiator/dbCommunicator/logs"]
+COPY databaseCommunicator/ codegladiator/dbCommunicator/
+#VOLUME codegladiator
+# `mkdir /codegladiator/test`
 #CMD ["python","codegladiator/backend/databaseCommunicator/main.py"]
